on-prem-resiliency-yamls/on-prem-resiliency-nodeport-for-docker-connector.yaml
# Copyright Sonatype, Inc., 2022, All Rights Reserved.

apiVersion: v1
kind: Service
metadata:
  name: nxrm-service-docker
  namespace: nxrm
  labels:
    app: nxrm
spec:
  type: NodePort
  selector:
    app: nxrm
  ports:
    - name: docker-connector
      protocol: TCP
      port: 9090
      targetPort: 9090
