on-prem-resiliency-yamls/on-prem-resiliency-services.yaml
# In the following YAML, <scheme> should typically be set to internal.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nxrm
  name: ingress-nxrm
  annotations:
    kubernetes.io/ingress.class: <load balancer class>
    <load balancer class>.ingress.kubernetes.io/scheme: <scheme>
    <load balancer class>.ingress.kubernetes.io/subnets: subnet-abc, subnet-xyz
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nxrm-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nxrm-service
  namespace: nxrm
  labels:
    app: nxrm
spec:
  type: NodePort
  selector:
    app: nxrm
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
